added create posts route

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/posts.create/posts.create.css">
       <link rel="stylesheet" href="app/posts.read/posts.read.css">
       <link rel="stylesheet" href="app/posts/posts.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -79,6 +80,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/posts.create/posts.create.controller.js"></script>
+          <script src="app/posts.create/posts.create.js"></script>
           <script src="app/posts.read/posts.read.controller.js"></script>
           <script src="app/posts.read/posts.read.js"></script>
           <script src="app/posts/posts.controller.js"></script>
