--- a/client/app/posts.create/posts.create.html
+++ b/client/app/posts.create/posts.create.html
@@ -1,3 +1,18 @@
-<div class="col-md-12">
-This is the posts.create view.
+<div class="container">
+<form>
+  <div class="form-group">
+    <label for="post-title">Title</label>
+    <input type="text" class="form-control" id="post-title" ng-model="post.title" placeholder="It's a wonderfully sunny day." />
+  </div>
+  <div class="form-group">
+    <label for="post-body">Body</label>
+    <textarea class="form-control" id="post-body" ng-model="post.body" placeholder="In a galaxy far, far away..." />
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" ng-model="post.publish" /> Publish
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="create()">Create</button>
+</form>
 </div>
