added posts delete

--- a/client/app/posts.read/posts.read.html
+++ b/client/app/posts.read/posts.read.html
@@ -2,5 +2,9 @@
   <h1 class="page-header">{{post.title}}</h1>
   {{post.body}}
   <br />
+  <br />
   {{post.author.name}} {{post.dob}} {{post._id}}
+  <br />
+  <br />
+  <div ui-view=""></div>
 </div>
