--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/posts.create/posts.create.css">
+      <link rel="stylesheet" href="app/posts.delete/posts.delete.css">
       <link rel="stylesheet" href="app/posts.read/posts.read.css">
       <link rel="stylesheet" href="app/posts/posts.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -82,6 +83,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/posts.create/posts.create.controller.js"></script>
           <script src="app/posts.create/posts.create.js"></script>
+          <script src="app/posts.delete/posts.delete.controller.js"></script>
+          <script src="app/posts.delete/posts.delete.js"></script>
           <script src="app/posts.read/posts.read.controller.js"></script>
           <script src="app/posts.read/posts.read.js"></script>
           <script src="app/posts/posts.controller.js"></script>
