added unsafe filter

--- a/client/index.html
+++ b/client/index.html
@@ -89,6 +89,7 @@
           <script src="app/posts.read/posts.read.js"></script>
           <script src="app/posts/posts.controller.js"></script>
           <script src="app/posts/posts.js"></script>
+          <script src="app/unsafe/unsafe.filter.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
